[package]
name = "fast_sssp"
version = "0.1.0"
edition = "2024"
authors = ["jeremy webb <alphastrata@gmail.com>"]
license = "MIT"
description = """
# About:
A naive impl of an SSSP algorithm from the 2025 ["Breaking the Sorting Barrier for Directed Single-Source Shortest Paths"](https://arxiv.org/abs/2504.17033) by Duan, Mao, Mao, Shu, and Yin (2025). 

## Paper claims:

- **Time Complexity**: O(m log^(2/3) n)
- **Space Complexity**: O(n + m)
- **Best for**: Sparse directed graphs where breaking the sorting barrier matters
- **Practical use**: Currently more of theoretical interest; Dijkstra may be faster in practice
"""

[lib]
name = "fast_sssp"

[features]
default = []
full = ["bincode", "serde", "flate2", "log", "env_logger", "reqwest"]
bincode = ["dep:bincode", "serde"]
serde = ["dep:serde"]
flate2 = ["dep:flate2"]
log = ["dep:log"]
env_logger = ["dep:env_logger", "log"]
reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }
bincode = { version = "2.0.1", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
flate2 = { version = "1.1.2", optional = true }
log = { version = "0.4.27", optional = true }
env_logger = { version = "0.11.8", optional = true }

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
harness = false
name = "bench"
path = "benches/sssp_benchmark.rs"

[[example]]
name = "wiki_talk_benchmark"
path = "examples/wiki_talk.rs"
required-features = ["bincode"]

[[bin]]
name = "fetch_data"
path = "bins/fetch_data.rs"
required-features = ["flate2", "bincode", "reqwest"]

[profile.release]
lto = true
codegen-units = 1
