[package]
name = "DunMaoSSSP"
version = "0.1.0"
edition = "2024"
authors = ["jeremy webb <alphastrata@gmail.com>"]
license = "MIT"
description = """
# About:
A naive impl of an SSSP algorithm from the 2025 ["Breaking the Sorting Barrier for Directed Single-Source Shortest Paths"](https://arxiv.org/abs/2504.17033) by Duan, Mao, Mao, Shu, and Yin (2025).
"""
publish = false

[lib]
name = "fast_sssp"

[features]
default = ["full"]
ahash = ["dep:ahash"]
parallel = ["dep:crossbeam", "dep:rayon", "dep:crossbeam-utils"]
simd_edge_relaxation = []
full = [
    "bincode",
    "serde",
    "flate2",
    "log",
    "env_logger",
    "reqwest",
    "parallel",
    "petgraph",
    # Ideas for improvement, not implemented currently...
    # "parallel_pivot",
    # "parallel_frontier_expansion",
    # "parallel_edge_relaxation",
]
bincode = ["dep:bincode", "serde"]
serde = ["dep:serde"]
flate2 = ["dep:flate2"]
log = ["dep:log"]
env_logger = ["dep:env_logger", "log"]
reqwest = ["dep:reqwest"]
petgraph = ["dep:petgraph"]

[dependencies]
ahash = { version = "0.8.12", optional = true }
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }
bincode = { version = "2.0.1", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
flate2 = { version = "1.1.2", optional = true }
log = { version = "0.4.27", optional = true }
env_logger = { version = "0.11.8", optional = true }
bit-vec = "0.8.0"
hashbrown = { version = "0.15.5", features = ["rayon"], optional = true }
crossbeam = { version = "0.8.4", optional = true }
petgraph = { version = "0.8.2", optional = true }
rayon = { version = "1.11.0", optional = true }
crossbeam-utils = { version = "0.8.21", optional = true }
osmpbf = "0.3.6"
osmpbfreader = "0.19.1"
geo = "0.31.0"

[dev-dependencies]
criterion = "0.7.0"
petgraph = "0.8.2"
rand = "0.9.2"


[[bench]]
name = "map_data"
harness = false
required-features = ["full"]

[[bin]]
name = "fetch_data"
path = "bins/fetch_data.rs"
required-features = ["flate2", "bincode", "reqwest"]

[profile.release]
lto = true
codegen-units = 1
